--- a/package.json
+++ b/package.json
@@ -31,16 +31,19 @@
     "babelify": "^7.2.0",
     "browserify": "^13.0.0",
     "chai": "^3.5.0",
+    "del": "^2.2.1",
     "express": "^4.14.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-babel": "^6.1.2",
     "gulp-clean-css": "^2.0.7",
+    "gulp-jsdoc3": "^0.3.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.1.0",
     "gulp-uglify": "^1.5.3",
     "gulp-util": "^3.0.7",
     "require-dir": "^0.3.0",
+    "sassdoc": "^2.1.20",
     "vinyl-source-stream": "^1.1.0"
   },
   "main": "dist/vulcanval.js",
