--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "gulp-uglify": "^1.5.3",
     "gulp-util": "^3.0.7",
     "karma": "^1.1.0",
+    "karma-browserify": "^5.0.5",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^1.0.1",
     "karma-firefox-launcher": "^1.0.0",
@@ -55,7 +56,8 @@
     "mocha": "^2.5.3",
     "require-dir": "^0.3.0",
     "sassdoc": "^2.1.20",
-    "vinyl-source-stream": "^1.1.0"
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.7.0"
   },
   "main": "src/js/main.js",
   "scripts": {
