--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "devDependencies": {
     "babel-preset-es2015": "^6.5.0",
     "babelify": "^7.2.0",
+    "body-parser": "^1.15.2",
     "browserify": "^13.0.0",
     "chai": "^3.5.0",
     "del": "^2.2.1",
