--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "prhone-log": "^2.0.1"
   },
   "devDependencies": {
+    "validator": "5.x",
     "babel-preset-es2015": "^6.5.0",
     "babelify": "^7.2.0",
     "body-parser": "^1.15.2",
