--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vulcanval",
-  "version": "1.0.0-beta",
+  "version": "1.0.0-beta.2",
   "description": "Validate data forms in client and server sides",
   "keywords": [
     "validation",
@@ -25,10 +25,9 @@
   },
   "dependencies": {
     "extend": "^3.0.0",
-    "prhone-log": "^2.0.1"
+    "prhone-log": "^2.1.0"
   },
   "devDependencies": {
-    "validator": "5.x",
     "babel-preset-es2015": "^6.5.0",
     "babelify": "^7.2.0",
     "body-parser": "^1.15.2",
@@ -42,7 +41,6 @@
     "gulp-clean-css": "^2.0.7",
     "gulp-jsdoc3": "^0.3.0",
     "gulp-rename": "^1.2.2",
-    "gulp-sass": "^2.1.0",
     "gulp-uglify": "^1.5.3",
     "gulp-util": "^3.0.7",
     "karma": "^1.1.0",
@@ -56,16 +54,20 @@
     "karma-mocha": "^1.1.1",
     "karma-phantomjs-launcher": "^1.0.1",
     "mocha": "^2.5.3",
+    "node-sass": "^3.8.0",
     "require-dir": "^0.3.0",
     "sassdoc": "^2.1.20",
+    "validator": "5.x",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.7.0"
   },
   "main": "src/js/main.js",
   "scripts": {
     "test": "npm run test-server && npm run test-client",
+    "test-desktop": "npm run test-server && npm run test-client-desktop",
     "test-server": "NODE_ENV=test mocha test/global",
     "test-client": "NODE_ENV=test karma start karma.conf.js",
+    "test-client-desktop": "NODE_ENV=test karma start karma-desktop.conf.js",
     "doc": "gulp doc",
     "build": "gulp build",
     "all": "gulp build && gulp doc && npm test"
