--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vulcanval",
   "version": "2.0.0",
-  "description": "Validate data forms in client and server sides",
+  "description": "Validate data forms in client and server sides seamlessly",
   "keywords": [
     "validation",
     "form",
@@ -30,7 +30,6 @@
   "devDependencies": {
     "babel-preset-es2015": "^6.5.0",
     "babelify": "^7.2.0",
-    "benchmark": "^2.1.0",
     "body-parser": "^1.15.2",
     "browserify": "^13.0.0",
     "chai": "^3.5.0",
@@ -65,11 +64,11 @@
   },
   "main": "src/js/main.js",
   "scripts": {
-    "test": "npm run test-global && npm run test-client",
-    "test-desktop": "npm run test-global && npm run test-client-desktop",
+    "test": "npm run test-global && npm run test-jquery",
+    "test-desktop": "npm run test-jquery-desktop",
     "test-global": "NODE_ENV=test mocha test/global && karma start karma-global.conf.js",
-    "test-client": "NODE_ENV=test karma start karma-client.conf.js",
-    "test-client-desktop": "NODE_ENV=test karma start karma-desktop.conf.js",
+    "test-jquery": "NODE_ENV=test karma start karma-jquery.conf.js",
+    "test-jquery-desktop": "NODE_ENV=test karma start karma-desktop.conf.js",
     "doc": "gulp doc",
     "build": "gulp build",
     "all": "gulp build && gulp doc && npm test"
