--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vulcanval",
-  "version": "2.0.4",
+  "version": "3.0.0-beta",
   "description": "Validate data forms in client and server sides seamlessly",
   "keywords": [
     "validation",
@@ -20,6 +20,19 @@
   "bugs": {
     "url": "https://github.com/vulcan-estudios/vulcanval/issues"
   },
+  "main": "bundle/js/vulcanval.js",
+  "scripts": {
+    "all": "npm run build && npm run bundle && npm run doc && npm run test",
+    "build": "./node_modules/.bin/gulp build",
+    "bundle": "./node_modules/.bin/babel src --out-dir bundle",
+    "test": "npm run test-global && npm run test-jquery",
+    "test-global": "npm run test-global-node && npm run test-global-karma",
+    "test-global-node": "NODE_ENV=test ./node_modules/.bin/mocha test/global",
+    "test-global-karma": "NODE_ENV=test ./node_modules/.bin/karma start karma-global.conf.js",
+    "test-jquery": "NODE_ENV=test ./node_modules/.bin/karma start karma-jquery.conf.js",
+    "test-jquery:desktop": "NODE_ENV=test ./node_modules/.bin/karma start karma-desktop.conf.js",
+    "docs": "./node_modules/.bin/gulp docs"
+  },
   "peerDependencies": {
     "validator": "5.x"
   },
@@ -28,6 +41,7 @@
     "prhone-log": "^2.1.0"
   },
   "devDependencies": {
+    "babel-cli": "^6.14.0",
     "babel-preset-es2015": "^6.5.0",
     "babelify": "^7.2.0",
     "body-parser": "^1.15.2",
@@ -62,16 +76,5 @@
     "validator": "5.x",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.7.0"
-  },
-  "main": "src/js/vulcanval.js",
-  "scripts": {
-    "test": "npm run test-global && npm run test-jquery",
-    "test-desktop": "npm run test-jquery-desktop",
-    "test-global": "NODE_ENV=test mocha test/global && karma start karma-global.conf.js",
-    "test-jquery": "NODE_ENV=test karma start karma-jquery.conf.js",
-    "test-jquery-desktop": "NODE_ENV=test karma start karma-desktop.conf.js",
-    "doc": "gulp doc",
-    "build": "gulp build",
-    "all": "gulp build && gulp doc && npm test"
   }
 }
