--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vulcanval",
-  "version": "3.0.0",
+  "version": "3.0.1",
   "description": "Validate data forms in client and server sides seamlessly",
   "keywords": [
     "validation",
@@ -34,7 +34,8 @@
     "docs": "./node_modules/.bin/gulp docs"
   },
   "peerDependencies": {
-    "validator": "5.x"
+    "validator": "5.x",
+    "jquery": "*"
   },
   "dependencies": {
     "extend": "^3.0.0",
@@ -70,6 +71,7 @@
     "karma-mocha-reporter": "^2.0.4",
     "karma-phantomjs-launcher": "^1.0.1",
     "mocha": "^2.5.3",
+    "mock-require": "^1.3.0",
     "node-sass": "^3.8.0",
     "require-dir": "^0.3.0",
     "sassdoc": "^2.1.20",
