--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vulcanval",
-  "version": "3.1.1",
-  "description": "Validate data forms in client and server sides seamlessly",
+  "version": "3.1.2",
+  "description": "Validate HTML form data universally seamlessly",
   "keywords": [
     "validation",
     "form",
