--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vulcanval",
-  "version": "3.1.2",
+  "version": "3.1.3",
   "description": "Validate HTML form data universally seamlessly",
   "keywords": [
     "validation",
@@ -22,20 +22,20 @@
   },
   "main": "bundle/js/vulcanval.js",
   "scripts": {
-    "build": "./node_modules/.bin/gulp build",
-    "bundle": "./node_modules/.bin/babel src --out-dir bundle",
+    "build": "gulp build",
+    "bundle": "babel src --out-dir bundle",
     "test": "npm run test-global && npm run test-jquery",
     "test-global": "npm run test-global-node && npm run test-global-browser",
-    "test-global-node": "NODE_ENV=test ./node_modules/.bin/mocha test/global",
-    "test-global-browser": "NODE_ENV=test ./node_modules/.bin/karma start karma-global.conf.js",
+    "test-global-node": "NODE_ENV=test mocha test/global",
+    "test-global-browser": "NODE_ENV=test karma start karma-global.conf.js",
     "test-jquery": "npm run test-jquery-v1 && npm run test-jquery-v2 && npm run test-jquery-v3",
-    "test-jquery-v1": "NODE_ENV=test ./node_modules/.bin/karma start karma-jquery-v1.conf.js",
-    "test-jquery-v2": "NODE_ENV=test ./node_modules/.bin/karma start karma-jquery-v2.conf.js",
-    "test-jquery-v3": "NODE_ENV=test ./node_modules/.bin/karma start karma-jquery-v3.conf.js",
-    "docs": "./node_modules/.bin/gulp docs"
+    "test-jquery-v1": "NODE_ENV=test karma start karma-jquery-v1.conf.js",
+    "test-jquery-v2": "NODE_ENV=test karma start karma-jquery-v2.conf.js",
+    "test-jquery-v3": "NODE_ENV=test karma start karma-jquery-v3.conf.js",
+    "docs": "gulp docs"
   },
   "peerDependencies": {
-    "validator": "5.x",
+    "validator": "*",
     "jquery": "*"
   },
   "dependencies": {
@@ -60,6 +60,7 @@
     "gulp-uglify": "^1.5.3",
     "gulp-util": "^3.0.7",
     "ink-docstrap": "^1.2.1",
+    "jquery": "^3.1.1",
     "karma": "^1.1.0",
     "karma-browserify": "^5.0.5",
     "karma-chai": "^0.1.0",
@@ -76,7 +77,7 @@
     "node-sass": "^3.8.0",
     "require-dir": "^0.3.0",
     "sassdoc": "^2.1.20",
-    "validator": "5.x",
+    "validator": "^6.1.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.7.0"
   }
