--- a/package.json
+++ b/package.json
@@ -44,7 +44,9 @@
   },
   "devDependencies": {
     "babel-cli": "^6.14.0",
+    "babel-core": "^6.18.0",
     "babel-preset-es2015": "^6.5.0",
+    "babel-register": "^6.18.0",
     "babelify": "^7.2.0",
     "body-parser": "^1.15.2",
     "browserify": "^13.0.0",
