--- a/bower.json
+++ b/bower.json
@@ -33,9 +33,15 @@
     "karma-global.conf.js",
     "karma-jquery.conf.js",
     "karma-desktop.conf.js",
+    "karma-jquery-base.conf.js",
+    "karma-jquery-v1.conf.js",
+    "karma-jquery-v2.conf.js",
+    "karma-jquery-v3.conf.js",
     ".gitignore",
     ".npmignore",
     ".editorconfig",
+    ".babelrc",
+    ".eslintrc",
     ".jshintrc",
     ".grunt",
     ".lock-wscript",
