--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vulcanval",
-  "version": "3.1.7",
+  "version": "3.1.8",
   "description": "Validate HTML form data universally seamlessly",
   "keywords": [
     "validation",
@@ -35,8 +35,7 @@
     "docs": "gulp docs"
   },
   "peerDependencies": {
-    "validator": "*",
-    "jquery": "*"
+    "validator": "*"
   },
   "dependencies": {
     "extend": "^3.0.0",
